SELECT element: Do not update popup menu content by touching selectedIndex

* HTMLSelectElement::selectOption
 Calls PopupMenu::updateFromElement() only if OPTION selection state was changed.

BUG=673446

Review-Url: https://codereview.chromium.org/2572953002
Cr-Commit-Position: refs/heads/master@{#438461}

Former-commit-id: abc1c2f1d368e085dd3556f45c0fb861965abc75